chore: add missing div container

--- a/_templates/sidebar-main.html
+++ b/_templates/sidebar-main.html
@@ -431,7 +431,8 @@
                                     href="docs/resources/paper-wallet.html#spending-coins-from-a-paper-wallet">Spending Coins</a></li>
                         </ul>
                     </li>
-                </ul>    
+                </ul>
+            </div>    
         </nav>
     </div>
 </div>
